--- a/style.css
+++ b/style.css
@@ -1,1 +1,41 @@
-header h1 {border: dashed;}
+* {
+padding: 0;
+margin: 0;
+}
+
+:root{
+    --background-color: black;
+    --primary-color: rgb(48, 1, 48);
+    --secondary-color: rgb(204, 174, 4);
+    --white-text-color: white;
+    --black-text-color: black;
+
+}
+
+header {
+    border: dashed;
+    background-color: var(--background-color)
+}
+
+.AboutMeTitle{
+    font-family:'Courier New', Courier, monospace;
+
+}
+
+.ProfilePic{
+    height: 700px;
+    width: 400px;
+}
+
+.ContactMe{
+    text-decoration-style: none;
+}
+
+li a{
+    text-decoration-style: none;
+    color: black;
+}
+
+a:link {
+    text-decoration: none;
+}
