--- a/style.css
+++ b/style.css
@@ -32,20 +32,23 @@ h1 {
 
 .AboutMeTitle{
     font-family:Arial, Helvetica, sans-serif;
+    font-size: 30px;
     display:block;
     margin: 1em 0 0 3em;
 
 }
 
 .AboutMeparagraph{
+    max-width: 700px;
+    font-size: 20px;
     display:block;
-    margin: 1em 0 0 4em;
+    margin: 1em 0 0 4.5em;
 
     
 }
 
 .ProfilePic{
-    margin-right: 2em;
+    margin: 0em 8em 5em 0em;
     border-radius: 25px;
     height: 500px;
     width: 400px;
@@ -79,7 +82,7 @@ h1 {
     margin: 15px;
     border-radius: 25px;
     height:500px;
-    width: 900px;
+    width: 1025px;
     box-shadow: 0px 0px 10px 10px black;
 }
 .work1:hover{
