--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ margin: 0;
 }
 
 header{
-    margin: 5px;
+    margin: 5px 0 0 20px;
     padding: 5px;
     font-family:cursive;
     border: solid;
@@ -28,12 +28,15 @@ body{
 
 h1 {
     float:right;
+    font-size: 40px;
+    margin-right: 10px;
 }
 
 .AboutMeTitle{
     font-family:Arial, Helvetica, sans-serif;
     font-size: 30px;
     display:block;
+    position: relative; top: 20px;
     margin: 1em 0 0 3em;
 
 }
@@ -41,6 +44,7 @@ h1 {
 .AboutMeparagraph{
     max-width: 700px;
     font-size: 20px;
+    position: relative; top: 20px;
     display:block;
     margin: 1em 0 0 4.5em;
 
@@ -48,12 +52,13 @@ h1 {
 }
 
 .ProfilePic{
-    margin: 0em 8em 5em 0em;
+    margin: 8em 8em 0em 0em;
     border-radius: 25px;
     height: 500px;
     width: 400px;
     display:block;
-    float: right;
+    position: relative; top: -100px;
+    float:right;
     box-shadow: 10px 10px 5px;
 }
 .ProfilePic:hover{
