--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ margin: 0;
 header{
     margin: 5px 0 0 20px;
     padding: 5px;
-    font-family:cursive;
+    font-family: cursive;
     border: solid;
     border-color: var(--secondary-color);
     background: linear-gradient(to left, var(--primary-color),var(--secondary-color));
@@ -42,6 +42,8 @@ h1 {
 }
 
 .AboutMeparagraph{
+    border: dotted;
+    padding: 2px;
     max-width: 700px;
     font-size: 20px;
     position: relative; top: 20px;
@@ -52,11 +54,11 @@ h1 {
 }
 
 .ProfilePic{
-    margin: 8em 8em 0em 0em;
+    margin: -2em 8em 0em 0em;
     border-radius: 25px;
     height: 500px;
     width: 400px;
-    display:block;
+    display:inline-block;
     position: relative; top: -100px;
     float:right;
     box-shadow: 10px 10px 5px;
@@ -77,8 +79,9 @@ h1 {
 
 .Work{
     font-family:Arial, Helvetica, sans-serif;
+    font-size: 30px;
     display:inline-block;
-    margin: 20em 0 0 3em;
+    margin: 13em 0 0 3em;
 }
 
 
